# PLC-Tool

./: .gitignore  CLAUDE.md  PLCTools.spec  build_exe.py  expo-launcher.js  pyproject.toml
src/plc_tools/: app.py
src/plc_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/plc_tools/communication/: __init__.py  base_driver.py  connection_manager.py  l5x_parser.py  logix_driver.py  micro800_driver.py  mock_driver.py  models.py  network_scanner.py  project_manager.py
src/plc_tools/gui/: connect_dialog.py  main_window.py  theme.py
src/plc_tools/gui/tabs/: diagnostics.py  fault_log.py  io_status.py  program_view.py  tag_list.py  tag_monitor.py
src/plc_tools/gui/widgets/: connection_bar.py  recording_bar.py  status_led.py  tag_browser.py
src/plc_tools/polling/: poller.py  scheduler.py
src/plc_tools/recording/: recorder.py
src/plc_tools/reports/: generator.py
tests/: test_l5x_parser.py  test_mock_driver.py  test_models.py  test_recorder.py
